@@ -1,3 +1,12 @@
+2006-07-20  Petr Ovtchenkov  <ptr@island.corbina.net>
+
+	* crc.h: use platform-independent uint32_t for CRC types.
+
+	* NetTransport.cc: use platform-independent uint32_t for
+	network communication.
+
+	* Cron.h, EvSession.h, Event.h: ditto
+
 2006-07-19  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* Event.h: libstdc++ v3, timestamp 20050519 (gcc 3.4.4)
